# svge

./: CMakeLists.txt  LICENSE  README
src/: main.cc
src/core/: exception.h  init.cc  init.h  opengl_helpers.cc  opengl_helpers.h  sdl_checked_call.h  time.cc  time.h
src/game/: events.cc  events.h  game.cc  game.h  input.cc  input.h  player.h  video.cc  video.h  voxel.h
src/game/scene/: gameplay.cc  gameplay.h  scene.h
src/sanitizers/: leak.supp
src/scripts/: run.sh
